projects/compiler/test/typechecker/assignment/accessor_error_method.2.out
Error at %FILE_NAME%:5:5
Cannot assign to static method 'fooStatic'
  |  Foo.fooStatic = "abcd"
         ^
'fooStatic' is a static method, which cannot be overwritten
