projects/compiler/test/typechecker/assignment/accessor_error_method.2.abra
type Foo {
  func fooStatic() {}
}

Foo.fooStatic = "abcd"